# parhelia

./: .beads.toml  .gitignore  README.md  parhelia.toml  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: e2e-modal.yml  image-rebuild.yml
docs/: AGENT_FRICTION_REPORT.md  EXECUTION-STRATEGY.md  IMPLEMENTATION-PLAN-claude-code-integration.md  MCP-AUTH.md  PRODUCTION.md  VALIDATION-PLAN.md
docs/adr/: ADR-001-system-architecture.md  ADR-002-durable-sessions.md
docs/compliance/: SOC2-COMPLIANCE.md
docs/spec/: SPEC-01-remote-environment.md  SPEC-02-session-management.md  SPEC-03-checkpoint-resume.md  SPEC-04-security-model.md  SPEC-05-local-orchestrator.md  (+9 more)
examples/: config.toml  mcp_config.json
scripts/: e2e_modal_tests.py  test_mcp_e2e.py
tests/: __init__.py  test_aggregator.py  test_approval.py  test_audit.py  test_budget.py  test_cas.py  test_checkpoint.py  test_checkpoint_diff.py  test_cli.py  test_cold_start.py  test_context_optimization.py  test_debugging.py  test_decomposer.py  test_dispatch.py  test_dispatch_state.py  test_dispatcher.py  test_entrypoint.py  test_environment.py  test_event_stream.py  test_events.py  test_feedback.py  test_grafana.py  test_headless.py  test_heartbeat.py  test_hook_executor.py  test_hook_validator.py  test_integration.py  test_interactive.py  test_intervention.py  test_issue_tracker.py  test_mcp.py  test_mcp_mirror.py  test_mcp_server.py  test_memory.py  test_metrics_aggregator.py  test_metrics_collector.py  test_metrics_pusher.py  test_modal_app.py  test_multisession.py  test_notification.py  (+22 more)
(+81 files in other folders)
