[project]
name = "parhelia"
version = "0.1.0"
description = "Remote Claude Code execution system using Modal.com"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Rand", email = "rand.arete@gmail.com" }
]

dependencies = [
    "modal>=0.66.0",
    "anthropic>=0.40.0",
    "tomli>=2.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=24.0.0",
    "aiohttp>=3.9.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.20.0",
    "click>=8.1.0",
]

[project.scripts]
parhelia = "parhelia.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parhelia"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "hypothesis>=6.150.2",
]
